Commit Copying File Changes
Creating The New Folder In the Session Stge Path And Copying